pass unit testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<h1>Welcome to hack-news!</h1>
 <app-search></app-search>
 <router-outlet></router-outlet>
