--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,11 +2,21 @@
   <h4>Hero Search</h4>
 
   <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+  <div> Search
   <select name="curTag" [(ngModel)]="curTag">
     <option *ngFor="let tag of tags" [ngValue]="tag">
       {{ tag.displayName }}
     </option>
   </select>
+  </div>
+
+  <div> Search
+    <select name="curHitsPerPage" [(ngModel)]="curHitsPerPage">
+      <option *ngFor="let count of hitsPerPages" [ngValue]="count">
+        {{ count }}
+      </option>
+    </select>
+  </div>
 
   <div *ngIf="searchResult$ | async as result">
         <app-news-list [hits]="result.hits"></app-news-list>
