--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>Welcome to hack-news!</h1>
-<app-search></app-search>
-<router-outlet></router-outlet>
+<!doctype html>
+<html lang="en">
+  <head>
+  </head>
+  <body>
+    <h1>Welcome to hack-news!</h1>
+    <app-search></app-search>
+    <router-outlet></router-outlet>
+  </body>
+</html>
