--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,22 +1,29 @@
-<div id="search-component">
-  <h4>Hack News Search</h4>
+<div id="search-component" class="container">
   <form [formGroup]="searchForm">
-    <div>
-      <input type="text" formControlName="term" />
-      <div> Search
-        <select formControlName="tag">
-          <option *ngFor="let t of tags" [ngValue]="t">
-            {{ t.displayName }}
-          </option>
-        </select>
+    <div class="container">
+      <div class="form-row">
+        <div class="form-group col-md-12">
+          <label for="term">Term</label>
+          <input type="text" formControlName="term" id="term" placeholder="Input search text here" class="form-control"/>
+        </div>
       </div>
-
-      <div> Search
-        <select formControlName="hitsPerPage">
-          <option *ngFor="let count of hitsPerPages" [ngValue]="count">
-            {{ count }}
-          </option>
-        </select>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="tag">Type</label>
+          <select formControlName="tag" id="tag" class="form-control">
+            <option *ngFor="let t of tags" [ngValue]="t">
+              {{ t.displayName }}
+            </option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="hitsPerPage"> PerPage</label>
+          <select formControlName="hitsPerPage" id="hitsPerPage" class="form-control">
+            <option *ngFor="let count of hitsPerPages" [ngValue]="count">
+              {{ count }}
+            </option>
+          </select>
+        </div>
       </div>
     </div>
   </form>
@@ -27,3 +34,4 @@
         {{result.hitsPerPage}}
   </div>
 </div>
+
