--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -30,8 +30,11 @@
 
 
   <div *ngIf="searchResult$ | async as result">
-        <app-news-list [hits]="result.hits"></app-news-list>
-        {{result.hitsPerPage}}
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">Total Hits {{result.nbHits}}, Total Page {{result.nbPages}}</a>
+    </nav>
+      <app-news-list [hits]="result.hits"></app-news-list>
+      {{result.hitsPerPage}}
   </div>
 </div>
 
