--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   <head>
   </head>
   <body>
-    <h1>Welcome to hack-news!</h1>
+    <h1 class="text-center">Welcome to hack-news!</h1>
     <app-search></app-search>
     <router-outlet></router-outlet>
   </body>
